2011-07-19  Vitaly Repeshko  <vitalyr@chromium.org>

        [V8] Don't put CSSRuleLists in object groups.
        https://bugs.webkit.org/show_bug.cgi?id=64798

        Reviewed by Pavel Feldman.

        Retention of CSSRuleLists should be implemented using hidden
        references from holder objects. By putting lists in groups we
        artificially extend their lifetimes much more than necessary.

        * bindings/v8/V8GCController.cpp:
        (WebCore::GrouperVisitor::visitDOMWrapper):

2011-07-19  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Add ewk_network.cpp|h files.
        https://bugs.webkit.org/show_bug.cgi?id=63315

        Enable setOnLine(bool) on EFL port as well as Android and Chromium.

        Reviewed by Antonio Gomes.

        * platform/network/NetworkStateNotifier.cpp:
        * platform/network/NetworkStateNotifier.h:

2011-07-19  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: implement import/export for timeline data.
        https://bugs.webkit.org/show_bug.cgi?id=64601

        Reviewed by Yury Semikhatsky.

        Test: inspector/timeline/timeline-load.html

        * English.lproj/localizedStrings.js:
        * inspector/InspectorFrontendHost.cpp:
        (WebCore::FrontendMenuProvider::contextMenuItemSelected):
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype._createFileSelector):
        (WebInspector.TimelinePanel.prototype._contextMenu):
        (WebInspector.TimelinePanel.prototype._exportToFile):
        (WebInspector.TimelinePanel.prototype._importFromFile):
        (WebInspector.TimelinePanel.prototype._addRecordToTimeline):
        (WebInspector.TimelinePanel.prototype._clearPanel):
        (WebInspector.TimelineModel):
        (WebInspector.TimelineModel.prototype._addRecord):
        (WebInspector.TimelineModel.prototype._importNextChunk):
        (WebInspector.TimelineModel.prototype._importFromFile):